<resources>
	<string name="Device_Widget_Fsat1_Ok">Fast</string>
	<string name="Device_Default_Name_GW11">Ceiling gateway</string>
	<string name="Device_Default_Name_CMICA6">4G Smart Cloud Camera</string>
	<string name="Penguin_Balance_Tip_4G">Please make sure the camera 4G flow card balance is enough</string>
	<string name="AddDevice_UnboundedGateway_Title">Unable to add device</string>
	<string name="AddDevice_UnboundedGateway_Content">No gateway is bound yet, please bind a gateway and retry</string>
	<string name="Backup_and_recovery">Backup and Recovery</string>
	<string name="Bootpage_610_Page1">Smart device   Convenient control</string>
	<string name="Bootpage_610_Page2">Scene steward   Free to define</string>
	<string name="Bootpage_610_Page3">Large speakers   Flexible access</string>
	<string name="Bootpage_610_Page4">Smart life   Instant access</string>
	<string name="Bootpage_Button_Open">OPEN</string>
	<string name="Environmental_Monitoring">Environmental</string>
	<string name="Device_Default_Name_42">CO2 Detector</string>
	<string name="Device_Default_Name_44">Dust detector</string>
	<string name="Find_Intelligentlife">Wulian Dynamics</string>
	<string name="Home_Widget_Unknownstate">Unknown State</string>
	<string name="Device_Default_Name_23">IR Transmitter(Semi Direction)</string>
	<string name="Home_Widget_Addremote">Add Remote Controller</string>
	<string name="Infraredrelay_List_Empty">Click below button to add your first remote controller</string>
	<string name="Infraredrelay_List_Memoryfull">IR transmitter\'s memory is full</string>
	<string name="Infraredrelay_Memoryfull_Prompt">Please empty code library or delete unnecessary remote controllers to release memory</string>
	<string name="Infraredrelay_List_Custom">Custom</string>
	<string name="Infraredrelay_Addremote_Television">TV</string>
	<string name="Infraredrelay_Addremote_Brandchoice">Select Brand</string>
	<string name="Infraredrelay_Addremote_Searchbrand">Search Brand</string>
	<string name="Infraredrelay_Addremote_Commonbrands">Common Brands</string>
	<string name="Infraredrelay_Addremote_Allbrands">All Brands</string>
	<string name="Infraredrelay_Addremote_Selectmodel">Select Model</string>
	<string name="Infraredrelay_Addremote_Searchmodel">Search Model</string>
	<string name="Infraredrelay_Addremote_Explain">Please check model on remote controller or in user manual, and matched code library download is recommended.</string>
	<string name="Infraredrelay_Addremote_Match">Matched Code Library Download</string>
	<string name="Infraredrelay_Addremote_Matchingmodel">Matched Model</string>
	<string name="Infraredrelay_Match_Step1">Aim IR transmitter at the electrical appliance to be matched</string>
	<string name="Infraredrelay_Match_Step2">Click "test button" and see whether any response from electrical appliance </string>
	<string name="Infraredrelay_Match_Step3">Click "Responding" or "Non-response" to change test button until match successfully</string>
	<string name="Infraredrelay_Match_Currentcode">Current code library </string>
	<string name="Infraredrelay_Match_Testbutton">Test Button</string>
	<string name="Infraredrelay_Match_Responsive">Responding</string>
	<string name="Infraredrelay_Match_Noresponse">Non-response</string>
	<string name="Infraredrelay_Addremote_Download">Download code library</string>
	<string name="Infraredrelay_Download_Explain">Downloading code library to device now, it may take about 2 minutes. Please do not use other functions during downloading.</string>
	<string name="Infraredrelay_Custom_Popuptitle">Custom Remote Controller</string>
	<string name="Infraredrelay_Custom_Entername">Enter remote controller name</string>
	<string name="Infraredrelay_Custom_Learningpopups">When red light inside IR transmitter is on, aim remote controller at IR transmitter\'s black signal receiving area, and quickly click once the button to be learnt</string>
	<string name="Infraredrelay_Custom_Matching">Matching…</string>
	<string name="Infraredrelay_Addremote_Downloadcomplete">Download is done</string>
	<string name="Infraredrelay_Downloadfailed_Title">Download fails</string>
	<string name="Infraredrelay_Downloadfailed_Prompt">Please check whether IR transmitter\'s memory is full, or whether it is located within effective communication distance from gateway</string>
	<string name="Infraredrelay_Custom_Matchsuccessfully">Match succeeds</string>
	<string name="Infraredrelay_Custom_Matchfailed">Match fails</string>
	<string name="Infraredrelay_Custom_Matchfailed_Prompt">Please make sure IR transmitter is located within effective communication distance from gateway, and aim remote controller at black signal receiving area</string>
	<string name="Infraredrelay_Custom_Buttonname">Name</string>
	<string name="Infraredrelay_Custom_Enterbuttonname">Enter button name</string>
	<string name="Infraredrelay_Custom_Deleteinfraredcode">Delete IR Code</string>
	<string name="Infraredrelay_Custom_Modifybuttonname">Modify Button Name</string>
	<string name="Infraredrelay_Custom_Deletebutton">Delete Button</string>
	<string name="Infraredrelay_Custom_Deletefailed">Deletion fails, please try again</string>
	<string name="Infraredrelay_More_Emptylibrary">Empty Code Library</string>
	<string name="Infraredrelay_More_Emptylibrary_Confirm">Confirm to empty all code library in IR transmitter?</string>
	<string name="Infraredrelay_Remotecontrol_Name">Name</string>
	<string name="Infraredrelay_Remotecontrol_Delete">Delete Remote Controller</string>
	<string name="Infraredrelay_Remotecontrol_Edit">Edit Remote Controller</string>
	<string name="Infraredtransponder_Airconditioner_Windswept">Swing Flap</string>
	<string name="Infraredtransponder_Airconditioner_Refrigeration">Cooling</string>
	<string name="Infraredtransponder_Airconditioner_Heating">Heat</string>
	<string name="Infraredtransponder_Airconditioner_Automatic">Auto</string>
	<string name="Infraredtransponder_Airconditioner_Dehumidify">Dehumidification</string>
	<string name="Infraredtransponder_Airconditioner_Air">Blowing-in</string>
	<string name="Infraredtransponder_Airconditioner_Direction">Wind Direction</string>
	<string name="Infraredtransponder_Airconditioner_Speed">Fan Speed</string>
	<string name="Infraredtransponder_Airconditioner_Temperature">TEMP</string>
	<string name="Infraredtransponder_Airconditioner_Name">Remote controller name</string>
	<string name="Infraredtransponder_Airconditioner_Reconfirm">Confirm to delete remote controller?</string>
	<string name="Infraredtransponder_Airconditioner_Remotecontrol">Air Conditioner</string>
	<string name="Infraredtransponder_Airconditioner_Download">Download</string>
	<string name="Infraredtransponder_Airconditioner_Previous">Previous</string>
	<string name="Infraredtransponder_Airconditioner_Next">Next</string>
	<string name="Infraredtransponder_Airconditioner_Waitfor">Downloading code library to device now, it may take 1 minute or so, please wait patiently and not use other functions during this time</string>
	<string name="Infraredtransponder_List_Airconditioner">Air Conditioning Remote Control</string>
	<string name="Infraredtransponder_Getlist_Fail">Failed to get the code library list</string>
	<string name="Infraredtransponder_Getcodelibrary_Fail">Failed to get the code library</string>
	<string name="Infraredtransponder_Airconditioner_Confirm">Use This</string>
	<string name="Infraredtransponder_Airconditioner_Instructions">Instructions</string>
	<string name="Infraredtransponder_Instructions_Tips1">Point the infrared transponder to the device to match.</string>
	<string name="Infraredtransponder_Instructions_Tips2">Click on the button to see if the air conditioner is responding.</string>
	<string name="Infraredtransponder_Instructions_Tips3">It is recommended to try several keystrokes, select a high match remote control, and then click OK to use.</string>
	<string name="Infraredtransponder_List_Nobrand">No brand</string>
	<string name="Infraredtransponder_Adddevice_LANlogin">LAN can not add the remote control, please use the mobile phone number registered landing.</string>
	<string name="Infraredtransponder_Airconditioner_Notopen">Air conditioning is not open</string>
	<string name="Infraredtransponder_Clearcode_Success">Clear the code library success</string>
	<string name="Infraredtransponder_Clearcode_Fail">Clear the code library failed</string>
	<string name="Infraredtransponder_widget_Airconditionername">%1$s Air Conditioner</string>
	<string name="Infraredtransponder_widget_TV">%1$s TV</string>
	<string name="Infraredtransponder_widget_Settopbox">%1$s Set top box</string>
	<string name="Heared_Tone">Heard prompt tone</string>
	<string name="Small_White_Limit">White childe has received the following permissions</string>
	<string name="Get_Device_Info">Get information about your device</string>
	<string name="Get_Scene">Get information about your scene</string>
	<string name="Get_Control_Device">Get your equipment control permissions</string>
	<string name="Get_Control_Scene">Get your scene control permissions</string>
	<string name="Cancel_Authorize">Cancel the authorization</string>
	<string name="Band_Firmware_Version_Update_Permit">Yes</string>
	<string name="Band_Firmware_Version_Update_Refuse">No</string>
	<string name="Config_No_Voice">Hear no prompt tone?</string>
	<string name="Config_Next_Step">Next Step</string>
	<string name="Cateye_WiFi_Setting_Tip">Press WiFi button once</string>
	<string name="Cateye_WiFi_Setting_Tip2">to see whether hear a prompt tone of[font] "wait for connection"[/font]</string>
	<string name="Cateyemini_Adddevice_Codestep1">1. Open Ding-dong mini device, select "scan QR code" in "system setting" menu to scan</string>
	<string name="Cateyemini_Adddevice_Codestep2">2. Scan QR code on screen by Ding-dong mini\'s lens</string>
	<string name="Cateyemini_Adddevice_Codestep3">3. Click next step after hearing a "beep"</string>
	<string name="Device_All">All</string>
	<string name="Device_More_Doorwayboard">Whether installed lock guide plate</string>
	<string name="IF_013">Aim the remote control at smart IR transmitter and control the distance in [font]1 meter [/font]</string>
	<string name="IF_014">When indicator light flash, Click it 1 time</string>
	<string name="IF_015">Can\'t find correspond remote control</string>
	<string name="IF_016">Reason:</string>
	<string name="IF_017">1.The remote button is not pointed at IR transmitter, causing the receiver to be inexact, can try again,click on the "match"</string>
	<string name="IF_018">2.The corresponding remote control is not found in the code base. Click "custom" to customize the remote control</string>
	<string name="IF_027">Rematch</string>
	<string name="Message_Center_delete_7">Within one week</string>
	<string name="Message_Center_delete_30">Within one month</string>
	<string name="Login_Account_Log_In">Go Login</string>
	<string name="Experience_Gateway_01">The gateway is not logged in</string>
	<string name="Experience_Gateway_02">The gateway is not logged in. The scene cannot be used. Please log in the gateway first</string>
	<string name="Experience_Gateway_03">Try the experience gateway</string>
	<string name="Addgateway_Toast_01">What is a gateway?</string>
	<string name="Addgateway_Toast_02">The gateway is a device in the ZigBee smart home system that connects various devices such as door locks, switches, sockets, curtains, etc., so that they can cooperate with each other and linkage. The user can send commands to the device remotely through the gateway, and the gateway can also pass the scene. Or the housekeeper automatically controls the equipment to meet the diverse needs of the users. It can be said that the gateway is the brain of the smart home.</string>
	<string name="Addgateway_Toast_03">Scan QR code binding gateway</string>
	<string name="Cancel">Cancel</string>
	<string name="Sure">Confirm</string>
	<string name="Tip_I_Known">Got it</string>
</resources>