<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#efeff4"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:text="@string/Experience_Gateway_01"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:text="@string/Experience_Gateway_02"
            android:textColor="#666666"
            android:textSize="15sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/btn_virtual"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="1dp"
        android:visibility="gone"
        android:background="@color/white"
        android:gravity="center"
        android:text="@string/Experience_Gateway_03"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/btn_bind"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="1dp"
        android:background="@color/white"
        android:gravity="center"
        android:text="@string/Login_Account_Log_In"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/btn_cancel"
        android:layout_width="match_parent"
        android:layout_height="@dimen/scene_all_item_image_size"
        android:layout_marginTop="1dp"
        android:background="@color/white"
        android:gravity="center"
        android:text="@string/Cancel"
        android:textColor="@color/v6_green"
        android:textSize="18sp" />
</LinearLayout>