<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/qr_tip1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        android:text="@string/Cateyemini_Adddevice_Codestep1"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/qr_tip2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@id/qr_tip1"
        android:layout_below="@id/qr_tip1"
        android:layout_marginTop="20dp"
        android:text="@string/Cateyemini_Adddevice_Codestep2"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/qr_tip3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@id/qr_tip1"
        android:layout_below="@id/qr_tip2"
        android:layout_marginTop="20dp"
        android:text="@string/Cateyemini_Adddevice_Codestep3"
        android:textSize="16sp" />

    <ImageView
        android:layout_below="@id/qr_tip3"
        android:layout_centerHorizontal="true"
        android:id="@+id/iv_qr_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp" />

    <Button
        android:id="@+id/btn_next_step"
        style="@style/config_next_button"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="@dimen/default_padding_large"
        android:text="@string/Config_Next_Step" />
</RelativeLayout>