<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/v6_bg">

    <RelativeLayout
        android:id="@+id/bg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <ImageView
            android:id="@+id/img_uei"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_margin="@dimen/default_padding_small"
            android:src="@drawable/bg_if01_match" />

        <TextView
            android:id="@+id/tv_tips"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/img_uei"
            android:drawableLeft="@drawable/icon_light_tip"
            android:paddingLeft="@dimen/default_padding_small"
            android:text="@string/IF_013"
            android:textColor="#333333"
            android:textSize="15sp" />


    </RelativeLayout>


    <LinearLayout
        android:id="@+id/ll_step_tip"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/bg"
        android:layout_marginTop="@dimen/default_padding_large"
        android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:gravity="center_vertical|right"
                android:text="@string/IF_014"
                android:textColor="#333333"
                android:singleLine="true"
                android:ellipsize="end"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_step_tip"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical|left"
                android:text="POWER"
                android:textColor="@color/v6_green"
                android:textSize="16sp" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/layout_fail_tip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ll_step_tip"
        android:layout_marginTop="@dimen/default_padding_large"
        android:orientation="vertical"
        android:visibility="invisible">

        <TextView
            android:id="@+id/tv_fail_tip"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/IF_015"
            android:textColor="#333333"
            android:textSize="18sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/default_padding_small"
            android:text="@string/IF_016" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/default_padding_small"
            android:text="@string/IF_017" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/default_padding_small"
            android:text="@string/IF_018" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginTop="@dimen/default_padding_large"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_retry"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="30dp"
                android:layout_weight="1"
                android:background="@drawable/shape_button_grey"
                android:gravity="center"
                android:text="@string/IF_027"
                android:textColor="#333333"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/tv_custom"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="40dp"
                android:layout_weight="1"
                android:background="@drawable/shape_button_green"
                android:gravity="center"
                android:text="@string/Infraredrelay_List_Custom"
                android:textColor="#ffffff"
                android:textSize="15sp" />

        </LinearLayout>


    </LinearLayout>


</RelativeLayout>