<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="200dp"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <TextView
        android:id="@+id/tv_week"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginTop="1dp"
        android:background="@color/white"
        android:gravity="center"
        android:text="@string/Message_Center_delete_7"
        android:visibility="visible" />

    <TextView
        android:id="@+id/tv_month"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginTop="1dp"
        android:background="@color/white"
        android:gravity="center"
        android:text="@string/Message_Center_delete_30"
        android:visibility="visible" />

    <TextView
        android:id="@+id/tv_all"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginTop="1dp"
        android:background="@color/white"
        android:gravity="center"
        android:text="@string/Device_All"
        android:visibility="visible" />
</LinearLayout>