<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:scaleType="centerInside"
        android:src="@drawable/icon_whiterobot" />

    <View
        android:id="@+id/item_gateway_center_line"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:background="@color/v6_line" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="40dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginTop="20dp"
            android:ellipsize="end"
            android:singleLine="true"
            android:text="@string/Small_White_Limit"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginTop="20dp"
            android:drawableLeft="@drawable/icon_point"
            android:drawablePadding="5dp"
            android:ellipsize="end"
            android:singleLine="true"
            android:text="@string/Get_Device_Info"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginTop="20dp"
            android:drawableLeft="@drawable/icon_point"
            android:drawablePadding="5dp"
            android:ellipsize="end"
            android:singleLine="true"
            android:text="@string/Get_Scene"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginTop="20dp"
            android:drawableLeft="@drawable/icon_point"
            android:drawablePadding="5dp"
            android:ellipsize="end"
            android:singleLine="true"
            android:text="@string/Get_Control_Device"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginTop="20dp"
            android:drawableLeft="@drawable/icon_point"
            android:drawablePadding="5dp"
            android:ellipsize="end"
            android:singleLine="true"
            android:text="@string/Get_Control_Scene"
            android:textColor="@color/black"
            android:textSize="15sp" />

    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <Button
            android:id="@+id/btn_unauth"
            style="@style/config_next_button"
            android:layout_gravity="bottom"
            android:layout_marginBottom="30dp"
            android:gravity="center"
            android:text="@string/Cancel_Authorize" />
    </FrameLayout>

</LinearLayout>