<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginEnd="@dimen/default_padding_normal"
    android:layout_marginStart="@dimen/default_padding_normal"
    android:background="@drawable/shape_default_dialog_bg"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_padding_normal"
        android:gravity="center"
        android:text="@string/Addgateway_Toast_01"
        android:textColor="@color/black"
        android:textSize="17sp" />

    <ImageView
        android:id="@+id/iv_normal_set_background"
        android:layout_width="wrap_content"
        android:layout_height="130dp"
        android:layout_gravity="center_horizontal"
        android:layout_margin="@dimen/default_padding_small"
        android:scaleType="fitCenter"
        android:src="@drawable/bg_gateway_introduce" />

    <TextView
        style="@style/config_wifi_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingEnd="@dimen/default_padding_small"
        android:paddingStart="@dimen/default_padding_small"
        android:text="@string/Addgateway_Toast_02" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_padding_small"
        android:paddingEnd="@dimen/default_padding_small"
        android:paddingStart="@dimen/default_padding_small"
        android:text="@string/Addgateway_Toast_03" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="@dimen/default_padding_normal"
        android:background="@color/v6_line" />

    <TextView
        android:id="@+id/tv_dialog_close"
        android:layout_width="match_parent"
        android:layout_height="@dimen/config_device_btn_height"
        android:layout_gravity="center_vertical"
        android:gravity="center"
        android:text="@string/Tip_I_Known"
        android:textColor="@color/v6_green"
        android:textSize="16sp" />

</LinearLayout>